[tool.poetry]
name = "oas3_collab_websocketserver"
version = "0.1.1"
description = "a webserver for node package `@joranbeasley/oas3-shared-editor-client`"
authors = ["Joran Beasley <joranbeasley@gmail.com>"]
license = "MIT"
packages = [{include = "acejs_collab_server"}]

[tool.poetry.dependencies]
python = "^3.7.1"
Twisted = "^22.2.0"
autobahn = {extras = ["twisted"], version = "^22.2.2"}

[tool.poetry.dev-dependencies]
bumpver = "^2022.1116"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.bumpver]
current_version = "2022.1002-alpha"
version_pattern = "YYYY.BUILD[-TAG]"
commit_message = "bump version {old_version} -> {new_version}"
commit = true
tag = true
push = true

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'current_version = "{version}"',
]

